dealing with pic. testing 2

--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -412,7 +412,7 @@ input, textarea {
   }
 }
 .projectPic {
-	display: inline-block;
+	// display: inline-block;
 	box-shadow: 2px 2px 15px 1px #ccc;
 	background-color: rgb(231, 243, 254);
 	position: relative;
