--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -407,12 +407,13 @@ input, textarea {
   margin-bottom: 0.5em;
   padding: 0.5em;
   padding-bottom: 1em;
+  position: relative;
   @media(min-width: 768px){
     flex-basis: 45%;
   }
 }
 .projectPic {
-	// display: inline-block;
+	display: inline-block;
 	box-shadow: 2px 2px 15px 1px #ccc;
 	background-color: rgb(231, 243, 254);
 	position: relative;
