--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -373,7 +373,6 @@ input, textarea {
   display: flex;
   flex-direction: column;
   padding: 1em;
-  width: 100%;
   @media(min-width: 899px){
     flex-direction: row;
   }
@@ -410,22 +409,11 @@ input, textarea {
   @media(min-width: 768px){
     flex-basis: 45%;
   }
+  @media(min-width: 959px){
+    flex-basis: 30%;
+  }
 }
-.projectPic {
-	display: inline-block;
-	box-shadow: 2px 2px 15px 1px #ccc;
-	background-color: rgb(231, 243, 254);
-	position: relative;
-	margin: 1em 0.7em;
-	overflow: hidden;
-	img {
-		width: 100%;
-	}
-	@media screen and (min-width: 768px){
-		flex-basis: 48%;
-		margin: 1em 0em;
-	}
-}
+
 .projectDesc {
   flex: 1;
 }
@@ -445,27 +433,30 @@ input, textarea {
   color: $eggplant;
   font-size: 1em;
 }
-.projectTitleBar {
-	background-color: $eggplant;
-  padding: 0.5em 1em;
-  text-align: center;
-}
-.projectTitleBar0 {
-	background-color: $eggplant;
-	opacity: 0.8;
-	position:absolute;
-	bottom: 5%;
-	width: 100%;
-	height: 3em;
-	z-index: 0;
-}
-.projectTitleBar1 {
-	position: absolute;
-	text-align: center;
-	font-size: 2em;
-	bottom: 5%;
-	width: 100%;
-	z-index: 1;
 
-}
 
+
+.portfolio{
+	overflow: auto;
+	position: relative;
+	width: 275px;
+	height: 220px;
+	float: left;
+  margin: 0.5em auto;
+  p{
+    position:absolute;
+    bottom: 10%;
+    width: 100%;
+    left: 0;
+    margin: 0;
+    background-color: #652e67d4;
+    text-align:center;
+    color: $white;
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+    img {
+      width: 275px;
+      height: 220px;    
+    }
+}
