--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -375,6 +375,7 @@ input, textarea {
   padding: 1em;
   @media(min-width: 899px){
     flex-direction: row;
+    justify-content: space-between;
   }
 }
 .portContent {
@@ -382,11 +383,12 @@ input, textarea {
   flex-direction: column;
   padding: 1em;
   flex-basis: 90%;
-  // @media (min-width: 768px){
-  //   flex-basis: 50%;
-  //   flex-direction: row;
-  //   flex-wrap: wrap;
-  // }
+  @media (min-width: 768px){
+    flex-basis: 50%;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
+  }
 }
 
 .projectHolder {
@@ -401,6 +403,7 @@ input, textarea {
 }
 .projectFrame{
   display:flex;
+  position: relative;
   flex-direction: column;
   background-color:#ededed;
   margin-bottom: 0.5em;
@@ -412,10 +415,6 @@ input, textarea {
   @media(min-width: 959px){
     flex-basis: 30%;
   }
-}
-
-.projectDesc {
-  flex: 1;
 }
 .projectLinks{
   ul {
@@ -437,7 +436,7 @@ input, textarea {
 
 
 .portfolio{
-	overflow: auto;
+	overflow: hidden;
 	position: relative;
 	width: 275px;
 	height: 220px;
