--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -347,18 +347,11 @@ input, textarea {
 
 .projectFrame {
   display: flex;
-  position: relative;
   flex-direction: column;
   background-color: #ededed;
   margin-bottom: 0.5em;
   padding: 0.5em;
   padding-bottom: 1em; }
-  @media (min-width: 768px) {
-    .projectFrame {
-      flex-basis: 45%; } }
-  @media (min-width: 959px) {
-    .projectFrame {
-      flex-basis: 30%; } }
 
 .projectLinks {
   color: #652e67;
@@ -375,24 +368,19 @@ input, textarea {
 
 .portfolio {
   overflow: hidden;
-  position: relative;
   width: 275px;
   height: 220px;
-  float: left;
-  margin: 0.5em auto; }
-  .portfolio p {
-    position: absolute;
-    bottom: 10%;
-    width: 100%;
-    left: 0;
-    margin: 0;
-    background-color: #652e67d4;
-    text-align: center;
-    color: #f5f8fa;
-    padding-top: 10px;
-    padding-bottom: 10px; }
+  float: left; }
   .portfolio img {
     width: 275px;
     height: 220px; }
+
+.titleBar {
+  background-color: #652e67;
+  text-align: center;
+  width: 100%; }
+  .titleBar p {
+    color: #f5f8fa;
+    margin: 0.2em; }
 
 /*# sourceMappingURL=style.css.map */
