--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -403,18 +403,12 @@ input, textarea {
 }
 .projectFrame{
   display:flex;
-  position: relative;
+  // position: relative;
   flex-direction: column;
   background-color:#ededed;
   margin-bottom: 0.5em;
   padding: 0.5em;
   padding-bottom: 1em;
-  @media(min-width: 768px){
-    flex-basis: 45%;
-  }
-  @media(min-width: 959px){
-    flex-basis: 30%;
-  }
 }
 .projectLinks{
   ul {
@@ -437,25 +431,22 @@ input, textarea {
 
 .portfolio{
 	overflow: hidden;
-	position: relative;
+	// position: relative;
 	width: 275px;
 	height: 220px;
 	float: left;
-  margin: 0.5em auto;
-  p{
-    position:absolute;
-    bottom: 10%;
-    width: 100%;
-    left: 0;
-    margin: 0;
-    background-color: #652e67d4;
-    text-align:center;
-    color: $white;
-    padding-top: 10px;
-    padding-bottom: 10px;
-  }
+  
     img {
       width: 275px;
       height: 220px;    
     }
+}
+.titleBar {
+  background-color: $eggplant;
+  text-align:center;
+  width: 100%;
+  p{
+    color: $white;  
+    margin: 0.2em;
+  }
 }
