--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -211,7 +211,10 @@ aside, article {
 }
 .titleHeader {
 	color: $eggplant;
-	font-size: 1.5em;
+  font-size: 1em;
+  @media screen and (min-width: 479px) {
+    font-size: 1.5em;
+  }
 }
 .imgWithText {
   display: flex;
@@ -381,11 +384,10 @@ input, textarea {
 }
 .portContent {
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   padding: 1em;
   flex-basis: 90%;
   @media (min-width: 768px){
-    flex-basis: 65%;
     flex-direction: row;
     justify-content: flex-start;
     flex-wrap: wrap;
@@ -395,7 +397,10 @@ input, textarea {
 .projectHolder {
 	display:flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-around;
+  @media screen and (min-width:1000px){
+    justify-content: flex-start;
+  }
 }
 .projectFrame{
   display: flex;
