--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -2,12 +2,19 @@ body {
   background-image: url("../images/paper/paper.png");
   font-family: 'Chivo', 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
   line-height: 1.5;
-  align-items: center; }
+    -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center; }
 
 .site {
-  display: flex;
+  display:-webkit-box;
+    display:-ms-flexbox;
+    display:flex;
   min-height: 100vh;
-  flex-direction: column; }
+  -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column; }
 
 .site-content {
   flex: 1 0 auto; }
@@ -41,18 +48,35 @@ header, footer {
   width: 100%; }
 
 .content-header {
-  display: flex;
+  display:-webkit-box;
+  display:-ms-flexbox;
+  display:flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column; }
   @media (min-width: 699px) {
     .content-header {
       padding: 0 1em;
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: row;
       flex-direction: row;
+      -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
       justify-content: space-between;
       align-items: flex-end; } }
 
 .brand {
-  display: flex;
+  display:-webkit-box;
+  display:-ms-flexbox;
+  display:flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
   margin-left: 0%; }
   @media (min-width: 899px) {
@@ -65,12 +89,18 @@ header, footer {
   font-size: 2em;
   letter-spacing: 0.1em;
   padding: 0.75em;
+  -webkit-box-flex: 1;
+  -ms-flex-positive: 1;
   flex-grow: 1; }
   .name h1 {
     text-align: center; }
 
 nav {
-  display: flex;
+  display:-webkit-box;
+  display:-ms-flexbox;
+  display:flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
   margin-right: 0%; }
   @media (min-width: 899px) {
@@ -78,12 +108,19 @@ nav {
       margin-right: 8%; } }
 
 #navLinks {
-  display: flex; }
+  display:-webkit-box;
+  display:-ms-flexbox;
+  display:flex; }
   #navLinks li {
-    display: flex;
+    display:-webkit-box;
+    display:-ms-flexbox;
+    display:flex;
+    -ms-flex-pack: distribute;
     justify-content: space-around;
     text-align: center;
     margin: 1em;
+    -webkit-box-flex: 1;
+    -ms-flex-positive: 1;
     flex-grow: 1; }
     @media (min-width: 899px) {
       #navLinks li {
@@ -118,14 +155,26 @@ nav {
   font-weight: bold; }
 
 .main {
-  display: flex;
+  display:-webkit-box;
+  display:-ms-flexbox;
+  display:flex;
   padding: 1em;
   width: 80%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column; }
   @media (min-width: 899px) {
     .main {
+      -webkit-box-align: start;
+      -ms-flex-align: start;
       align-items: flex-start;
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: row;
       flex-direction: row;
+      -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
       justify-content: space-between; } }
 
 aside, article {
@@ -133,7 +182,12 @@ aside, article {
   margin-bottom: 1em; }
 
 .aboutContent {
-  display: flex;
+  display:-webkit-box;
+  display:-ms-flexbox;
+  display:flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
   padding: 1em; }
   @media (min-width: 899px) {
@@ -150,19 +204,27 @@ aside, article {
 .titleHeader {
   color: #652e67;
   font-size: 1em; 
-  width:100%
+  flex:1;
+  text-align:center;
 }
   @media screen and (min-width: 479px) {
     .titleHeader {
       font-size: 1.5em; } }
 
 .imgWithText {
-  display: flex;
+  display:-webkit-box;
+  display:-ms-flexbox;
+  display:flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
   justify-content: flex-start; }
 
 .iconRow ul {
-  display: flex;
+  display:-webkit-box;
+    display:-ms-flexbox;
+    display:flex;
   flex-wrap: wrap;
   justify-content: flex-start; }
   @media (min-width: 768px) {
@@ -175,7 +237,12 @@ aside, article {
         padding: 0 0.5em; } }
 
 .socialMedia {
-  display: flex;
+  display:-webkit-box;
+  display:-ms-flexbox;
+  display:flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
   padding: 1em; }
   @media (min-width: 899px) {
@@ -190,13 +257,22 @@ aside, article {
   float: left; }
 
 .socialMedia-container {
-  display: flex;
+  display:-webkit-box;
+  display:-ms-flexbox;
+  display:flex;
   flex-wrap: wrap;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   text-align: center; }
   @media (min-width: 899px) {
     .socialMedia-container {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
       flex-direction: column; } }
 
 .socialMedia-holder {
@@ -226,8 +302,14 @@ aside, article {
       left: 0;
       width: 100%;
       height: 100%;
-      display: flex;
+      display:-webkit-box;
+      display:-ms-flexbox;
+      display:flex;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
       justify-content: center;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
       align-items: center;
       color: #f5f8fa;
       transition: background 1s; }
@@ -320,53 +402,86 @@ input, textarea {
   color: #652e67; }
 
 .portMain {
-  display: flex;
-  flex-direction: column;
+  display:-webkit-box;
+    display:-ms-flexbox;
+    display:flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
   padding: 1em; }
   @media (min-width: 899px) {
     .portMain {
-      justify-content: space-between;
-      align-items: flex-start; } }
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    -webkit-box-align: start;
+    -ms-flex-align: start;
+    align-items: flex-start; } }
 
 .portContent {
-  display: flex;
+  display:-webkit-box;
+  display:-ms-flexbox;
+  display:flex;
   flex-wrap: wrap;
+  justify-content: flex-start;
   padding: 1em;
   flex-basis: 90%; }
   @media (min-width: 768px) {
     .portContent {
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: row;
       flex-direction: row;
       justify-content: flex-start;
+      -ms-flex-wrap: wrap;
       flex-wrap: wrap; } }
 
 .profProjHolder{
-  display: flex;
+  display:-webkit-box;
+  display:-ms-flexbox;
+  display:flex;
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
+  -ms-flex-pack: distribute;
   justify-content: space-around;
 }
 
 
 .projectHolder {
-  display: flex;
+  display:-webkit-box;
+  display:-ms-flexbox;
+  display:flex;
   flex-wrap: wrap;
+  -ms-flex-pack: distribute;
   justify-content: space-around; }
   @media screen and (min-width: 1000px) {
     .projectHolder {
       justify-content: flex-start; } }
-
-.projectFrame {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: #ededed;
-  margin-bottom: 0.5em;
-  padding: 0.5em; }
+    .projectFrame {
+      display:-webkit-box;
+      display:-ms-flexbox;
+      display:flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center;
+      background-color: #ededed;
+      margin: 0.5em;
+      padding: 0.5em; }
 
 .projectLinks {
   width: 100%;
   color: #652e67; }
   .projectLinks ul {
-    display: flex;
+    display:-webkit-box;
+    display:-ms-flexbox;
+    display:flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between; }
     .projectLinks ul li {
       font-size: 0.7em;
