--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,33 @@
+/* 
+primary color #4D2B8C rgb(77, 43, 140);
+primary darker #391972 rgb(57,25,114);
+primary darkest #240957 rgb(36,9,87);
+primary lighter #63449B rgb(99, 68, 155);
+primary lightest #856AB6 rgb(133, 106, 182);
+
+secondary color #85409D rgb(133, 64, 157);
+secondary darker #71288C rgb(113, 40, 140);
+secondary darkest #591571 rgb(89, 21, 113);
+secondary lighter #A163B7 rgb(161, 99, 183);
+secondary lightest #C697D7 rgb(198, 151, 215);
+
+secondary2 color #EEA727 rgb(238, 167, 39);
+secondary2 darker #C5830C rgb(197, 131, 12);
+secondary2 darkest #9C6400 rgb(156, 100, 0);
+secondary2 lighter #FDC051 rgb(253, 192, 81);
+secondary2 lightest #FFD07A rgb(255, 208, 122);
+
+accent color #FFEF5F rgb(255, 239, 95);
+accent darker #E7D539 rgb(231, 213, 57);
+accent darkest #C0AF18 rgb(192, 175, 24);
+accent lighter #FFF283 rgb(255, 242, 131);
+accent lightest #FFF7AE rgb(255, 247, 174);
+
+ */
+
 :root {
-  --primary-color: #652e67;
-  --secondary-color: #c6b1c7;
-  --light-color: #f5f8fa;
-  --dark-color: #97919f;
+  --white: #f5f8fa;
+  --black: #0c0c22;
 }
 
 .sr-only {
@@ -12,12 +37,11 @@
   padding: 0;
   margin: -1px;
   overflow: hidden;
-  clip: rect(0,0,0,0);
+  clip: rect(0, 0, 0, 0);
   border: 0;
 }
 
 body {
-  background-image: url('../images/paper/paper.png');
   font-family: 'Chivo', 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
   line-height: 1.5;
   align-items: center;
@@ -63,109 +87,53 @@ hr {
   margin: 1em 0 1.5em 0;
 }
 
-header {
+/* HEADER HERO NAV  */
 
-}
-
-header {
-  width: 100%;
-}
-
-.content-header {
+.split-screen-hero {
   display: flex;
-  flex-direction: column;
-}
-@media (min-width: 699px) {
-  .content-header {
-    padding: 0 1em;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: flex-end;
-  }
 }
 
-.brand {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin-left: 0%;
-}
-@media (min-width: 899px) {
-  .brand {
-    margin-left: 10%;
-  }
-}
-
-.name {
-  background-color: #652e67;
-  color: #f5f8fa;
-  font-size: 2em;
-  letter-spacing: 0.1em;
-  padding: 0.75em;
-  flex-grow: 1;
-}
-.name h1 {
-  text-align: center;
-}
-
-#ihtlogo {
-  box-sizing: content;
-  width: 1.5em;
-  height: 1.5em;
+.profile-image-coin {
   border-radius: 50%;
-  background-color: #f5f8fa;
-  display: inline-block;
-  padding-top: 0.1em;
+  margin: 0 auto;
+  margin-top: 10px;
+  height: 200px;
+  width: 200px;
+  position: relative;
 }
 
-#ihtlogo img {
-  width: 80%;
-  height: 80%;
+.profile-image {
+  border-radius: 50%;
+  position: absolute;
+  overflow: hidden;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  transition:
+    transform 1s;
 }
 
-.aboutContent {
-  display: flex;
-  flex-direction: column;
-  padding: 1em;
-}
-@media (min-width: 899px) {
-  .aboutContent {
-    flex-basis: 70%;
-  }
+.profile-image img {
+  width: 100%;
+  object-fit: cover;
 }
 
-.aboutImg {
-  width: 80%;
+.profile-image.front img {
+  width: 110%;
 }
 
-.titleHeader {
-  color: #652e67;
-  font-size: 1.5em;
+.profile-image.back {
+  transform: rotateY(180deg);
 }
 
-.imgWithText {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-}
+.profile-image-coin:hover .profile-image.front {
+  transform: rotateY(-180deg);
 
-.iconRow ul {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
 }
-@media (min-width: 768px) {
-  .iconRow ul {
-    justify-content: flex-start;
-  }
-}
-.iconRow ul li {
-  padding: 0 0.4em;
-}
-@media (min-width: 980px) {
-  .iconRow ul li {
-    padding: 0 0.5em;
-  }
+.profile-image-coin:hover .profile-image.back {
+  transform: rotateY(0);
 }
 
 /* NEED FOR ROLLOVER. REFER TO THIS LATER  */
@@ -329,95 +297,6 @@ header {
   background: #595959;
 }
 
-footer {
-  background-color: #c6b1c7;
-  color: #fff;
-  padding: 0.6em;
-  border-top: 4px solid #652e67;
-}
-
-footer p {
-  font-size: 0.75em;
-  text-align: center;
-}
-
-label {
-  color: #97919f;
-  display: block;
-  margin: 0.75em 0 0.25em 0;
-}
-
-input,
-textarea {
-  width: 100%;
-  font-size: 1em;
-  padding: 0.5em;
-}
-
-#subBtn {
-  background-color: #652e67;
-  color: #f5f8fa;
-  font-size: 1em;
-  margin-top: 0.75em;
-  padding: 0.75em 1.5em;
-  border-width: 0;
-}
-
-#subBtn:hover {
-  background-color: #c6b1c7;
-  color: #652e67;
-}
-
-.portMain {
-  display: flex;
-  flex-direction: column;
-  padding: 1em;
-}
-@media (min-width: 899px) {
-  .portMain {
-    flex-direction: row;
-  }
-}
-
-.portContent {
-  display: flex;
-  flex-direction: column;
-  padding: 1em;
-  flex-basis: 90%;
-}
-
-.projectHolder {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-}
-@media (min-width: 768px) {
-  .projectHolder {
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
-}
-
-.projectFrame {
-  display: flex;
-  flex-direction: column;
-  background-color: #ededed;
-  margin-bottom: 0.5em;
-  padding: 0.5em;
-  padding-bottom: 1em;
-}
-@media (min-width: 768px) {
-  .projectFrame {
-    flex-basis: 45%;
-  }
-}
-@media (min-width: 959px) {
-  .projectFrame {
-    flex-basis: 30%;
-  }
-}
-
 .projectDesc {
   flex: 1;
 }
@@ -438,30 +317,3 @@ textarea {
 .projectLinks ul li a {
   color: #652e67;
 }
-
-.portfolio {
-  overflow: auto;
-  position: relative;
-  width: 275px;
-  height: 220px;
-  float: left;
-  margin: 0.5em auto;
-}
-.portfolio p {
-  position: absolute;
-  bottom: 10%;
-  width: 100%;
-  left: 0;
-  margin: 0;
-  background-color: #652e67d4;
-  text-align: center;
-  color: #f5f8fa;
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
-.portfolio img {
-  width: 275px;
-  height: 220px;
-}
-
-/*# sourceMappingURL=style.css.map */
